# rs_cam

./: .gitattributes  .gitignore  .mcp.json  AGENT_PROMPT.md  AI_MACHINIST_ANALYSIS_REFERENCE.md  CLAUDE.md  CREDITS.md  Cargo.toml  FEATURE_CATALOG.md  G13_PROMPT.md  GUI_WIRING_CATALOG.md  IMPLEMENTATION_PLAN.md  LICENSE  PROGRESS.md  Performance_review.md  README.md  VENDOR_LUT_GUI_PLAN.md
architecture/: README.md  TRI_DEXEL_SIMULATION.md  brep_step_support.md  high_level_design.md  (+4 more)
crates/rs_cam_cli/: Cargo.toml
crates/rs_cam_cli/src/: helpers.rs  job.rs  main.rs  project.rs  sweep.rs
crates/rs_cam_cli/tests/: integration.rs
crates/rs_cam_core/: Cargo.toml
crates/rs_cam_core/benches/: perf_suite.rs
crates/rs_cam_core/data/vendor_lut/: source_manifest.json
crates/rs_cam_core/data/vendor_lut/observations/: amana_3d_profiling.json  amana_ball_nose.json  amana_facing.json  amana_flat_end.json  amana_vbit.json
crates/rs_cam_core/posts/: grbl.toml  grblhal.toml  linuxcnc.toml  mach3.toml
crates/rs_cam_core/src/: adaptive.rs  adaptive3d.rs  adaptive_shared.rs  arc_util.rs  arcfit.rs  boundary.rs  chamfer.rs  collision.rs  contour_extract.rs  debug_trace.rs  depth.rs  dexel.rs  dexel_mesh.rs  dexel_stock.rs  dressup.rs  drill.rs  dropcutter.rs  dxf_input.rs  enriched_mesh.rs  face.rs  feedopt.rs  fiber.rs  fingerprint.rs  gcode.rs  gcode_validator.rs  geo.rs  horizontal_finish.rs  inlay.rs  interrupt.rs  io.rs  lib.rs  machine.rs  material.rs  mesh.rs  narrate.rs  pencil.rs  pipeline.rs  pocket.rs  polygon.rs  profile.rs  (+27 more)
crates/rs_cam_core/src/adaptive/: material_grid.rs  mod.rs  path.rs  search.rs
crates/rs_cam_core/src/adaptive3d/: clearing.rs  mod.rs  path.rs  search.rs
crates/rs_cam_core/src/compute/: annotate.rs  catalog.rs  collision_check.rs  config.rs  cutter.rs  execute.rs  mod.rs  operation_configs.rs  semantic_helpers.rs  simulate.rs  spans.rs  stats.rs  stock_config.rs  tool_config.rs  transform.rs
crates/rs_cam_core/src/dexel_stock/: cut_direction.rs  mod.rs  simulation.rs  stamping.rs
crates/rs_cam_core/src/feeds/: INTEGRATION.md  geometry.rs  mod.rs  vendor_lookup.rs  vendor_lut.rs  vendor_normalize.rs
crates/rs_cam_core/src/gcode/: emitter.rs  ir.rs  mod.rs  modal.rs  post.rs  program_builder.rs  wizard_overlay.rs
crates/rs_cam_core/src/session/: compute.rs  mod.rs  mutation.rs  project_file.rs  save.rs  wizard.rs
crates/rs_cam_core/src/tool/: ball.rs  bullnose.rs  flat.rs  mod.rs  tapered_ball.rs  vbit.rs
crates/rs_cam_core/src/tool_load/: chipload.rs  deflection.rs  locality.rs  mod.rs  optimize.rs  power.rs  suggest.rs  verdict.rs
crates/rs_cam_core/src/tool_load/optimize/: axes.rs  bounds.rs  candidate.rs  context.rs  delta.rs  mod.rs  narrative.rs  outcome.rs  patches.rs  policy.rs  preflight.rs  rank.rs  refusal.rs  space.rs
crates/rs_cam_core/src/tool_load/optimize/retarget/: chipload.rs  deflection.rs  mod.rs  power.rs
crates/rs_cam_core/src/tool_load/optimize/strategy/: grid.rs  headroom.rs  mod.rs  retarget.rs
crates/rs_cam_core/tests/: adaptive3d_post_tsp_z_monotonicity.rs  agent_search_axial_doc.rs  agent_search_coverage.rs  boundary_clip_invalidates_spans.rs  capability_link_moves_safety.rs  chipload_formula_calibration.rs  dressup_span_invariants.rs  drop_cutter_off_mesh.rs  end_to_end.rs  gcode_emitter_parity.rs  gcode_emulator_validation.rs  gcode_phase0_capture.rs  gcode_validator_baseline.rs  kinematics_histogram.rs  lookup_parity.rs  optimize_smoke.rs  param_sweep.rs  project_curve_deviation.rs  property_tests.rs  sim_chipload_invariant.rs  sim_radial_engagement_density.rs  step_import.rs  step_project_load.rs  vendor_lut_sub_1mm.rs  wanaka_axial_doc.rs  wanaka_boundary_diag.rs  wanaka_e2e_chipload_gate.rs
crates/rs_cam_core/tests/fixtures/: rivers_aligned.dxf  test_job.toml
crates/rs_cam_mcp/: Cargo.toml
crates/rs_cam_mcp/src/: main.rs  server.rs
crates/rs_cam_viz/: Cargo.toml
crates/rs_cam_viz/src/: app.rs  controller.rs  error.rs  lib.rs  mcp_bridge.rs  mcp_server.rs
crates/rs_cam_viz/src/app/: export.rs  gpu_upload.rs  input.rs  mcp.rs  simulation.rs  viewport.rs
crates/rs_cam_viz/src/compute/: mod.rs  worker.rs
crates/rs_cam_viz/src/compute/worker/: execute.rs  helpers.rs  semantic.rs  tests.rs
crates/rs_cam_viz/src/compute/worker/execute/: mod.rs  operations_2d.rs  operations_3d.rs
crates/rs_cam_viz/src/controller/: events.rs  io.rs  tests.rs  workflow_tests.rs
crates/rs_cam_viz/src/controller/events/: compute.rs  mod.rs  model.rs  simulation.rs  toolpath.rs  undo.rs
crates/rs_cam_viz/src/interaction/: mod.rs  picking.rs
crates/rs_cam_viz/src/io/: export.rs  import.rs  mod.rs  presets.rs  project.rs  setup_sheet.rs
crates/rs_cam_viz/src/render/: camera.rs  colors.rs  fixture_render.rs  gpu_safety.rs  grid_render.rs  height_planes.rs  mesh_render.rs  mod.rs  sim_render.rs  stock_render.rs  toolpath_render.rs
crates/rs_cam_viz/src/state/: history.rs  job.rs  mod.rs  runtime.rs  selection.rs  simulation.rs  toolpath.rs  viewport.rs
crates/rs_cam_viz/src/state/toolpath/: catalog.rs  configs.rs  entry.rs  support.rs
crates/rs_cam_viz/src/ui/: automation.rs  export_wizard.rs  menu_bar.rs  mod.rs  optimize_modal.rs  optimize_project.rs  preflight.rs  project_tree.rs  setup_panel.rs  shortcuts_window.rs  sim_debug.rs  sim_diagnostics.rs  sim_op_list.rs  sim_timeline.rs  status_bar.rs  suggest_modal.rs  theme.rs  toolpath_panel.rs  toolpath_row_controls.rs  viewport_overlay.rs  workspace_bar.rs
crates/rs_cam_viz/src/ui/properties/: mod.rs  operations.rs  pocket.rs  post.rs  setup.rs  stock.rs  tool.rs
crates/rs_cam_viz/src/ui/properties/operations/: boundary_2d.rs  drill.rs  engrave.rs  finishing.rs  mod.rs  project.rs  surface_3d.rs
crates/rs_cam_viz/tests/: wizard_e2e.rs
crates/rs_cam_viz/tests/fixtures/: flat_plate.stl  missing_model_project.toml  sample_2d_project.toml  sample_3d_project.toml  sample_adaptive_debug_project.toml  sample_dropcutter_debug_project.toml
tests/step_validation/: Cargo.toml
tests/step_validation/src/: gen_fixtures.rs  main.rs
(+287 files in other folders)
