[workspace]
resolver = "2"
members = [
    "crates/rs_cam_core",
    "crates/rs_cam_cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
nalgebra = "0.33"
stl_io = "0.11"
kiddo = "4"
rayon = "1.10"
thiserror = "2"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
geo = "0.32"
cavalier_contours = "0.7"
usvg = "0.47"
dxf = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
