[workspace]
resolver = "2"
members = [
    "crates/rs_cam_core",
    "crates/rs_cam_cli",
    "crates/rs_cam_viz",
    "crates/rs_cam_mcp",
]
exclude = [
    "tests/step_validation",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
nalgebra = "0.33"
stl_io = "0.11"
kiddo = "4"
rayon = "1.10"
thiserror = "2"
tracing = "0.1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
geo = "0.32"
cavalier_contours = "0.7"
usvg = "0.47"
dxf = "0.6"
smallvec = { version = "1", features = ["union"] }
criterion = { version = "0.5", features = ["html_reports"] }

[workspace.lints.clippy]
# Error handling strictness — prevent panic-prone patterns
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
indexing_slicing = "deny"

# Production hygiene — no debug artifacts or raw IO in shipped code
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"

# Error quality
map_err_ignore = "deny"

# Code quality
needless_pass_by_value = "deny"
large_enum_variant = "deny"
result_large_err = "deny"
redundant_clone = "deny"
wildcard_imports = "deny"
clone_on_ref_ptr = "deny"
implicit_clone = "deny"
str_to_string = "deny"
semicolon_if_nothing_returned = "deny"
manual_let_else = "deny"

[workspace.lints.rust]
unsafe_code = "deny"
