[package]
name = "rs_cam_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core CAM library for 3-axis wood router toolpath generation"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
nalgebra = { workspace = true }
stl_io = { workspace = true }
kiddo = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1"
geo = { workspace = true }
cavalier_contours = { workspace = true }
usvg = { workspace = true }
dxf = { workspace = true }

[dev-dependencies]
approx = "0.5"
criterion = { workspace = true }

[[bench]]
name = "perf_suite"
harness = false
