[package]
name = "rs_cam_core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core CAM library for 3-axis wood router toolpath generation"

[features]
default = ["parallel"]
parallel = ["rayon"]
step = ["truck-stepio", "truck-topology", "truck-meshalgo", "truck-geometry", "truck-polymesh"]

[dependencies]
nalgebra = { workspace = true }
stl_io = { workspace = true }
rayon = { workspace = true, optional = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = "1"
geo = { workspace = true }
cavalier_contours = { workspace = true }
usvg = { workspace = true }
dxf = { workspace = true }
smallvec = { workspace = true }
truck-stepio = { version = "0.3", features = ["in"], optional = true }
truck-topology = { version = "0.6", optional = true }
truck-meshalgo = { version = "0.4", optional = true }
truck-geometry = { version = "0.5", optional = true }
truck-polymesh = { version = "0.6", optional = true }

[lints]
workspace = true

[dev-dependencies]
approx = "0.5"
criterion = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png"] }

[[bench]]
name = "perf_suite"
harness = false
