[package]
name = "rs_cam_mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for rs_cam — exposes ProjectSession to AI agents"

[lib]
name = "rs_cam_mcp"
path = "src/lib.rs"

[[bin]]
name = "rs_cam_mcp"
path = "src/main.rs"

[dependencies]
rs_cam_core = { path = "../rs_cam_core" }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
