[package]
name = "rs_cam_viz"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rs_cam_gui"
path = "src/bin/main.rs"

[dependencies]
rs_cam_core = { path = "../rs_cam_core" }
eframe = { version = "0.30", features = ["wgpu"] }
egui = "0.30"
egui-wgpu = "0.30"
nalgebra = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = "0.3"
rfd = "0.15"
bytemuck = { version = "1", features = ["derive"] }
